@@ -14,6 +14,7 @@
 package de.cau.cs.kieler.kgraph.text.ui.contentassist;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 
 import javax.inject.Inject;
@@ -471,13 +472,19 @@ public class KGraphProposalProvider extends AbstractKGraphProposalProvider {
                         break;
                     case OBJECT:
                         try {
+                        
                             proposal = "\""
-                                    + optionData.getOptionClass().newInstance().toString()
+                                    + optionData.getOptionClass().getDeclaredConstructor().newInstance().toString()
                                     + "\"";
-                        } catch (final InstantiationException e) {
+                        
+                        } catch (final InstantiationException 
+                                | IllegalAccessException 
+                                | IllegalArgumentException 
+                                | NoSuchMethodException e) {
                             proposal = "\"\"";
-                        } catch (final IllegalAccessException e) {
+                        } catch (final InvocationTargetException e) {
                             proposal = "\"\"";
+                            e.printStackTrace();
                         }
                         break;
 
